update swagger file, added reports endpoints
