# data/routes/customer.py
@@ -4,13 +4,20 @@ from data.views.customer import CustomerViewClass
 
 
 customer_routes = [
-
-    path("customers/<str:customer_code>/",
-         CustomerViewClass.as_view({"get": "get_customer",
-                                   "delete":"delete",
-                                   "put":"update",
-                                   }), name="customer"),
-    path("customers/",
-         CustomerViewClass.as_view({"get": "get_customers",
-                                   "post": "create"}), name="customers"),
+    path(
+        "customers/<str:customer_code>/",
+        CustomerViewClass.as_view(
+            {
+                "get": "get_customer",
+                "delete": "delete",
+                "put": "update",
+            }
+        ),
+        name="customer",
+    ),
+    path(
+        "customers/",
+        CustomerViewClass.as_view({"get": "get_customers", "post": "create"}),
+        name="customers",
+    ),
 ]
