# data/routes/product.py
@@ -4,13 +4,20 @@ from data.views.product import ProductViewClass
 
 
 product_routes = [
-
-    path("products/<str:product_code>/",
-         ProductViewClass.as_view({"get": "get_product",
-                                   "delete":"delete",
-                                   "put":"update",
-                                   }), name="product"),
-    path("products/",
-         ProductViewClass.as_view({"get": "get_products",
-                                   "post": "create"}), name="products"),
+    path(
+        "products/<str:product_code>/",
+        ProductViewClass.as_view(
+            {
+                "get": "get_product",
+                "delete": "delete",
+                "put": "update",
+            }
+        ),
+        name="product",
+    ),
+    path(
+        "products/",
+        ProductViewClass.as_view({"get": "get_products", "post": "create"}),
+        name="products",
+    ),
 ]
